--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"apps/**/*.ts\" --fix",
+    "pre-depcheck": "mv ./src/package.json ./src/!package.json",
+    "depcheck": "npm run pre-depcheck && { depcheck && npm run post-depcheck; } || { npm run post-depcheck && exit 1; }",
+    "post-depcheck": "mv ./src/!package.json ./src/package.json"
   },
   "dependencies": {
     "@nestjs/common": "8.0.0",
@@ -21,8 +23,8 @@
     "@nestjs/platform-express": "8.0.0",
     "eslint-config-airbnb-base": "15.0.0",
     "reflect-metadata": "0.1.13",
-    "rimraf": "3.0.2",
-    "rxjs": "7.2.0"
+    "rxjs": "7.2.0",
+    "depcheck": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.7.7",
@@ -37,11 +39,9 @@
     "@babel/preset-typescript": "7.7.7",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "8.0.0",
-    "@nestjs/testing": "8.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.0.0",
-    "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "eslint": "7.32.0",
@@ -57,7 +57,6 @@
     "eslint-plugin-rulesdir": "0.2.0",
     "prettier": "2.3.2",
     "source-map-support": "^0.5.20",
-    "supertest": "6.1.3",
     "ts-loader": "9.2.3",
     "ts-node": "10.0.0",
     "tsconfig-paths": "3.10.1",
